tests/Fixtures/Directives/Invalid/RepeatableMismatchDirective.php
<?php

declare(strict_types=1);

namespace TheCodingMachine\GraphQLite\Fixtures\Directives\Invalid;

use Attribute;
use TheCodingMachine\GraphQLite\Directives\DirectiveDefinition;
use TheCodingMachine\GraphQLite\Directives\DirectiveLocation;
use TheCodingMachine\GraphQLite\Directives\FieldDirective;

/**
 * PHP IS_REPEATABLE is set but DirectiveDefinition::$repeatable is false — should be rejected by
 * the validator's repeatable-parity rule.
 */
#[Attribute(Attribute::TARGET_METHOD | Attribute::TARGET_PROPERTY | Attribute::IS_REPEATABLE)]
final class RepeatableMismatchDirective implements FieldDirective
{
    public static function definition(): DirectiveDefinition
    {
        return new DirectiveDefinition(
            name: 'mismatched',
            locations: [DirectiveLocation::FIELD_DEFINITION],
            repeatable: false,
        );
    }
}
